# aws-telegram-bot-serverless

./: .gitignore  README.md
.github/workflows/: 1- create-state-bucket.yml  1-create-state-bucket.yml  2-deploy-bot.yml  3-destroy-bot-infra.yml  create-state-bucket.yml
lambda/: upload.sh
lambda-bot/bot-function/: bot.py  bot3.py  requirements.txt
lambda-bot/webhook-function/: webhook.py
lambda/bot-dependencies-layer/: requirements.txt
lambda/bot-function/: bot.py  pyproject.toml
lambda/webhook-function/: webhook.py
terraform/: .terraform.lock.hcl  00-provider.tf  01-networking.tf  01-roles.tf  02-lambda.tf  02-secrets.tf  03-lambda-layer-with-dependencies.tf  03-roles.tf  04-lambda-bot.tf  04-output.tf  05-lambda-webhook.tf  05-secrets.tf  06-api-gateway.tf  07-bucket-images.tf  08-dynamodb-stats.tf  90-bucket-dynamo.tf  90-networking.tf  98-output.tf  99-data.tf  create_bucket.sh  variables.tf
webhook-lambda/: webhook.py
