[tool.poetry]
name = "tg-bot-serverless"
version = "0.1.0"
description = ""
authors = ["andygolubev"]
license = "MIT"
readme = "README.md"
packages = [{include = "tg_bot_serverless"}]

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
